--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/logo.ico" rel="icon">
-  <link href="assets/img/logo.ico" rel="apple-touch-icon">
+  <link href="assets/img/logo.png" rel="icon">
+  <link href="assets/img/logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i,700,700i|Satisfy|Comic+Neue:300,300i,400,400i,700,700i" rel="stylesheet">
@@ -90,7 +90,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Get more confident with your look!</h2>
-                <p class="animate__animated animate__fadeInUp">Only you can better your look, get your service today.</p>
+                <p class="animate__animated animate__fadeInUp">Get your service today.</p>
                 <div>
                 </div>
               </div>
@@ -194,7 +194,7 @@
             <div class="swiper-slide">
               <div class="row event-item">
                 <div class="col-lg-6">
-                  <img src="assets/img/prop1.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/prop2.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                   <div class="price">
@@ -236,18 +236,54 @@
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                   <div class="price">
-                    <p><span>Facials, Nails & Ear-piercing</span></p>
+                    <p><span>Manicure & Ear-piercing</span></p>
                   </div>
                   <ul>
-                    <li><i class="bi bi-check-circle"></i>Pedicure</li>
-                    <li><i class="bi bi-check-circle"></i>Manicure</li>
-                    <li><i class="bi bi-check-circle"></i>Makeup</li>
+                    <li><i class="bi bi-check-circle"></i>3D Manicure</li>
+                    <li><i class="bi bi-check-circle"></i>Brazillian manicure</li>
                     <li><i class="bi bi-check-circle"></i>Acrylics</li>
                     <li><i class="bi bi-check-circle"></i>Nail polish</li>
                   </ul>
                 </div>
               </div>
             </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="row event-item">
+                <div class="col-lg-6">
+                  <img src="assets/img/prop3.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-6 pt-4 pt-lg-0 content">
+                  <div class="price">
+                    <p><span>Pedicure & Facials</span></p>
+                  </div>
+                  <ul>
+                    <li><i class="bi bi-check-circle"></i>Gel Pedicure</li>
+                    <li><i class="bi bi-check-circle"></i>Mini Pedicure</li>
+                    <li><i class="bi bi-check-circle"></i>Make up</li>
+                    <li><i class="bi bi-check-circle"></i>French Pedicure</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div class="row event-item">
+                <div class="col-lg-6">
+                  <img src="assets/img/prop1.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-6 pt-4 pt-lg-0 content">
+                  <div class="price">
+                    <p><span>Kids Hair-Styling </span></p>
+                  </div>
+                  <ul>
+                    <li><i class="bi bi-check-circle"></i>Braiding</li>
+                    <li><i class="bi bi-check-circle"></i>Micro-braiding</li>
+                    <li><i class="bi bi-check-circle"></i>Flat iron</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
 
           </div>
           <div class="swiper-pagination"></div>
@@ -450,7 +486,7 @@
                 </div>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  The staff is friendly, warm, and cooperative. They greet me with happy faces all the time!
+                  The staff are friendly, warm, and cooperative. They greet me with happy faces all the time!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -479,7 +515,7 @@
             <div class="col-lg-3 col-md-6 info">
               <i class="bi bi-geo-alt"></i>
               <h4>Location:</h4>
-              <p>Thika Bazaar, 2nd Flr, Above (Pizza Inn) in Thika</p>
+              <p>Thika Bazaar, 2nd Flr, (Above Pizza Inn) in Thika</p>
             </div>
 
             <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
@@ -508,8 +544,9 @@
       <!-- <a href="index.html"><img src="assets/img/logo-white.png.webp" alt="" class="img-fluid"></a><br><br> -->
       <p>Follow us on our socials we will always get back to you as soon as we can.</p>
       <div class="social-links">
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/julzbeautyparlour/?igshid=OGQ5ZDc2ODk2ZA%3D%3D" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.tiktok.com/@julzparlour" class="tiktok"><i class="bx bxl-tiktok"></i></a>
+        <a href="https://www.facebook.com/julzparlour/" class="facebook"><i class="bx bxl-facebook"></i></a>
       </div>
       <div class="copyright">
         &copy;2023 <strong><span>Julz Executive Beauty Parlour</span></strong>.
