social link update

--- a/index.html
+++ b/index.html
@@ -64,65 +64,10 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero">
-    <div class="hero-container">
-      <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
-        <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
+  <img src="assets/img/home1.jpg" alt="home" class="responsive">
 
-        <div class="carousel-inner" role="listbox">
-
-          <!-- Slide 1 -->
-          <div class="carousel-item active" style="background: url(assets/img/slide/2.jpg);">
-            <div class="carousel-container">
-              <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown"><span>Julz</span> Executive Beauty Parlour</h2>
-                <p class="animate__animated animate__fadeInUp">Welcome to Julz Executive Beauty Parlour</p>
-                <!-- <div>
-                  <a href="#about" class="btn-menu animate__animated animate__fadeInUp scrollto">About us</a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-
-          <!-- Slide 2 -->
-          <div class="carousel-item" style="background: url(assets/img/slide/2.jpg);">
-            <div class="carousel-container">
-              <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown">Get more confident with your look!</h2>
-                <p class="animate__animated animate__fadeInUp">Get your service today.</p>
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Slide 3 -->
-          <div class="carousel-item" style="background: url(assets/img/slide/2.jpg);">
-            <div class="carousel-background"><img src="assets/img/slide/2.jpg" alt=""></div>
-            <div class="carousel-container">
-              <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown">Visit us today!</h2>
-                <!-- <p class="animate__animated animate__fadeInUp">.</p> -->
-                <div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-        <!-- <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
-        </a> -->
-
-        <!-- <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-        </a> -->
-
-      </div>
-    </div>
-  </section><!-- End Hero -->
+<!-- End Hero -->
 
   <main id="main">
 
@@ -232,17 +177,19 @@
             <div class="swiper-slide">
               <div class="row event-item">
                 <div class="col-lg-6">
-                  <img src="assets/img/3.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/prop3.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                   <div class="price">
-                    <p><span>Manicure & Ear-piercing</span></p>
+                    <p><span>Manicure & Pedicure</span></p>
                   </div>
                   <ul>
                     <li><i class="bi bi-check-circle"></i>3D Manicure</li>
                     <li><i class="bi bi-check-circle"></i>Brazillian manicure</li>
                     <li><i class="bi bi-check-circle"></i>Acrylics</li>
                     <li><i class="bi bi-check-circle"></i>Nail polish</li>
+                    <li><i class="bi bi-check-circle"></i>Mini Pedicure</li>
+                    <li><i class="bi bi-check-circle"></i>Gel Pedicure</li>
                   </ul>
                 </div>
               </div>
@@ -251,17 +198,18 @@
             <div class="swiper-slide">
               <div class="row event-item">
                 <div class="col-lg-6">
-                  <img src="assets/img/prop3.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/prop4.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                   <div class="price">
-                    <p><span>Pedicure & Facials</span></p>
+                    <p><span>Facials & Ear-piercing</span></p>
                   </div>
                   <ul>
-                    <li><i class="bi bi-check-circle"></i>Gel Pedicure</li>
-                    <li><i class="bi bi-check-circle"></i>Mini Pedicure</li>
                     <li><i class="bi bi-check-circle"></i>Make up</li>
-                    <li><i class="bi bi-check-circle"></i>French Pedicure</li>
+                    <li><i class="bi bi-check-circle"></i>Ear-piercing</li>
+                    <li><i class="bi bi-check-circle"></i>Bridal Package</li>
+                    <li><i class="bi bi-check-circle"></i>Chemical Peel</li>
+                    <li><i class="bi bi-check-circle"></i>Anti-Aging Facials</li>
                   </ul>
                 </div>
               </div>
@@ -280,6 +228,7 @@
                     <li><i class="bi bi-check-circle"></i>Braiding</li>
                     <li><i class="bi bi-check-circle"></i>Micro-braiding</li>
                     <li><i class="bi bi-check-circle"></i>Flat iron</li>
+                    <li><i class="bi bi-check-circle"></i>Ponytail Splits</li>
                   </ul>
                 </div>
               </div>
