--- a/index.html
+++ b/index.html
@@ -63,11 +63,14 @@
     </div>
   </header><!-- End Header -->
 
-  <!-- ======= Hero Section ======= -->
+  <!-- ======= Banner Section ======= -->
 
-  <img src="assets/img/home1.jpg" alt="home" class="responsive">
-
-<!-- End Hero -->
+  <section id="banner">
+    <div class="banner-text"><h1></h1>
+    <p>Relax, Heal, Refresh</p>
+</div>
+</section>
+<!-- End Banner -->
 
   <main id="main">
 
