--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <!-- ======= Banner Section ======= -->
 
   <section id="banner">
-    <div class="banner-text"><h1></h1>
+    <div class="banner-text"><h1>Julz Executive Beauty Parlour</h1>
     <p>Relax, Heal, Refresh</p>
 </div>
 </section>
